--- a/projects/demo/src/pages/components/keypad/examples/6/index.less
+++ b/projects/demo/src/pages/components/keypad/examples/6/index.less
@@ -17,6 +17,7 @@
 tui-keypad {
     flex: 1;
     min-block-size: 0;
+    grid-auto-rows: 1fr; // fill the flex height instead of the fixed default rows
 }
 
 .input {
